--- a/doc/notes.lyx
+++ b/doc/notes.lyx
@@ -1887,7 +1887,7 @@ ons and then write the numerator as a fourier series or fourier transform
 \end_layout
 
 \begin_layout Subsubsection
-Taylor Seroes
+Taylor Series
 \end_layout
 
 \begin_layout Standard
